<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <LinearLayout
      android:id="@+id/word"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:orientation="horizontal"/>
  <ImageView
      android:id="@+id/multi_source_tip_arrow_handle"
      android:layout_width="44dp"
      android:layout_height="44dp"
      android:layout_toLeftOf="@id/word"
      android:layout_alignBottom="@id/word"
      android:src="@drawable/corner_arrow_handle"
      android:visibility="gone"/>
  <LinearLayout
      android:id="@+id/sources"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/word"
      android:layout_centerHorizontal="true"
      android:orientation="horizontal"/>
  <ImageView
      android:id="@+id/multi_source_tip_arrow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/word"
      android:layout_toLeftOf="@id/sources"
      android:src="@drawable/corner_arrow"
      android:visibility="gone"/>
  <Button
      android:id="@+id/spell_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_below="@id/sources"
      android:layout_centerHorizontal="true"
      android:text="@string/spell"/>
</RelativeLayout>