<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpellActivity">
  <include layout="@layout/part_spell"/>
  <include android:id="@+id/nearby_tip" layout="@layout/part_nearby_add_tip"/>
</FrameLayout>