<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical">
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/word_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        layout="@layout/part_multi_source_tip"/>
  </FrameLayout>
  <include layout="@layout/part_spell_word"/>
</LinearLayout>